example/secondfile/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>API_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>API Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>API_Process_Status__c</fullName>
        <label>API  Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CDG/SubAccount API Successful</fullName>
                </value>
                <value>
                    <fullName>Retrigger CDG/SubAccount API in Progress</fullName>
                </value>
                <value>
                    <fullName>CDG/SubAccount API Failed</fullName>
                </value>
                <value>
                    <fullName>Circuit ID/USO API Successful</fullName>
                </value>
                <value>
                    <fullName>Retrigger Circuit ID/USO API in Progress</fullName>
                </value>
                <value>
                    <fullName>Circuit ID/USO API Failed</fullName>
                </value>
                <value>
                    <fullName>Encrypted Password API Successful</fullName>
                </value>
                <value>
                    <fullName>Retrigger Encrypted Password API in Progress</fullName>
                </value>
                <value>
                    <fullName>Encrypted Password API Failed</fullName>
                </value>
                <value>
                    <fullName>Deal Rate Plan API Failed</fullName>
                </value>
                <value>
                    <fullName>Deal Rate Plan API Successful</fullName>
                </value>
                <value>
                    <fullName>Deal Rate Plan API in Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASE_MACD_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASE MACD Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASE_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASE Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATOM_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ATOM Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATTUID__c</fullName>
        <formula>Account.At_T_Employee_UID__c</formula>
        <label>CAM ATTUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Address__c</fullName>
        <formula>Account.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_City__c</fullName>
        <formula>Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Contract_Renewal__c</fullName>
        <formula>IF(Service_type__c==&apos;AMIS&apos;,Account.MIS_Contract_Renewal__c,
IF(Service_type__c==&apos;AVPN&apos;,Account.AVPN_Contract_Renewal__c,false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Contract Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <formula>Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Zipcode__c</fullName>
        <formula>Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Zipcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apply_Promotions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is used to trigger promotions logic on post EBM Decisions.</description>
        <label>Apply_Promotions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Approval_Status__c</fullName>
        <label>Auto Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved with Discount</fullName>
                </value>
                <value>
                    <fullName>Approved without Discount</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Deal_Registration_Rule_Applied__c</fullName>
        <label>Auto Deal Registration Rule Applied</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Deal_Registration__c</fullName>
        <formula>Account.Auto_Deal_Registration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Deal Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BID_ID__c</fullName>
        <externalId>true</externalId>
        <label>Deal Registration Number</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BackendMACDType__c</fullName>
        <label>BackendMACDType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Deal_Reg_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Deal Reg Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BroadBand_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BroadBand Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDG_Sub_Account_Last_Run_Error_Msg__c</fullName>
        <label>CDG Sub Account Last Run Error Msg</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CDG_Sub_Account_Last_timestamp__c</fullName>
        <label>CDG Sub Account Last timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CDG_Sub_Account_Status__c</fullName>
        <label>CDG Sub Account Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Promo_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CI Promo Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CI_process_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CI process completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculated_Discount_Percentage__c</fullName>
        <label>Calculated Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Circuit_ID_USO_Last_Run_Error_Msg__c</fullName>
        <label>Circuit ID/USO Last Run Error Msg</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Circuit_ID_USO_Last_timestamp__c</fullName>
        <label>Circuit ID/USO  Last timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Circuit_ID_USO_Status__c</fullName>
        <label>Circuit ID/USO Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clear_Special_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clear Special Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ContersignedDate__c</fullName>
        <description>Partner Exchange Order Countersigned date</description>
        <inlineHelpText>Partner Exchange Order Countersigned Date</inlineHelpText>
        <label>CountersignedDate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractNumber__c</fullName>
        <description>Auto Incremental for Contract Number</description>
        <displayFormat>{000000}</displayFormat>
        <label>ContractNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contract_Automation_Complete_ATP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Automation Complete (ATP)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Flow__c</fullName>
        <label>Contract Flow</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>API</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Check_Status__c</fullName>
        <label>Credit Check Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Check Review</fullName>
                </value>
                <value>
                    <fullName>Credit Check Failure Resolved</fullName>
                </value>
                <value>
                    <fullName>Credit Check Approved</fullName>
                </value>
                <value>
                    <fullName>Credit Check Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cumulative_List_Price__c</fullName>
        <label>Cumulative List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_OTC_Discount_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cumulative OTC Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_OTC_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cumulative OTC Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_BID_Deal_Owner__c</fullName>
        <label>Current BID Deal Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Deal_Reg_Percentage__c</fullName>
        <label>Custom Deal Reg Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date_Assigned_to_Owner__c</fullName>
        <label>Date Assigned to Owner</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DealRegDecisionOpty__c</fullName>
        <label>DealRegDecisionOpty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_On_Off_Cart__c</fullName>
        <label>Deal On/Off Cart</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Off Cart</fullName>
                </value>
                <value>
                    <fullName>On Cart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Rate_Plan_Error_Msg__c</fullName>
        <label>Deal Rate Plan Error Msg</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Rate_Plan_ID__c</fullName>
        <label>Deal Rate Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Rate_Plan_Last_Time_Stamp__c</fullName>
        <label>Deal Rate Plan Last Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deal_Rate_Plan_Status__c</fullName>
        <label>Deal Rate Plan Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Reg_Approval_Date__c</fullName>
        <label>Deal Reg Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Reg_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deal Reg Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Reg_Discount_Percentage__c</fullName>
        <formula>Custom_Deal_Reg_Percentage__c</formula>
        <label>Deal Reg Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deal_Registration_Discounted_Percentage__c</fullName>
        <formula>IF(ATOM_Deal__c == true||API_Flag__c ==true,IF(ISBLANK(Calculated_Discount_Percentage__c),Discounted_Percentage__c,Calculated_Discount_Percentage__c), ((List_Price__c - Discounted_Price__c)/ List_Price__c))</formula>
        <label>Deal Registration Discounted Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deal_Status__c</fullName>
        <label>Deal Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_cosumption__c</fullName>
        <formula>Account.Direct_Consumption__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct consumption</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discounted_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Deal Registration Discounted Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discounted_Price__c</fullName>
        <label>Discounted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EBM_Discount_Plan_Assignment_Status__c</fullName>
        <label>EBM Discount Plan Assignment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discount Plan Assignment Successful</fullName>
                </value>
                <value>
                    <fullName>Discount Plan Assignment Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EndCustomerCity__c</fullName>
        <formula>End_Customer__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndCustomerCity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndCustomerName__c</fullName>
        <formula>End_Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndCustomerName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndCustomerState__c</fullName>
        <formula>End_Customer__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndCustomerState</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndCustomerZip__c</fullName>
        <formula>End_Customer__r.Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndCustomerZip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Cust_Address__c</fullName>
        <formula>TRIM(End_Customer__r.Mailing_Street_Address__c)+ TRIM(End_Customer__r.City__c)+ TRIM(End_Customer__r.State__c)+ TRIM(End_Customer__r.Zip__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Cust Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Address__c</fullName>
        <formula>End_Customer__r.Mailing_Street_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Customer Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Name__c</fullName>
        <formula>LOWER(TRIM(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(End_Customer__r.Name, &quot;?&quot;, &quot;&quot;), &quot;/&quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;), &quot;,&quot;, &quot;&quot;), &quot;;&quot;, &quot;&quot;), &quot;:&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;{&quot;, &quot;&quot;), &quot;}&quot;, &quot;&quot;), &quot;[&quot;, &quot;&quot;), &quot;]&quot;, &quot;&quot;), &quot;&apos;&quot;, &quot;&quot;), &quot;=&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;=&quot;, &quot;&quot;), &quot;^&quot;, &quot;&quot;), &quot;&amp;&quot;, &quot;&quot;), &quot;*&quot;, &quot;&quot;), &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;_&quot;, &quot;+&quot;), &quot;#&quot;, &quot;&quot;), &quot;!&quot;, &quot;&quot;), &quot;`&quot;, &quot;&quot;), &quot;@&quot;, &quot;&quot;), &quot;$&quot;, &quot;&quot;), &quot;%&quot;, &quot;&quot;), &quot;1&quot;, &quot;&quot;), &quot;2&quot;, &quot;&quot;), &quot;3&quot;, &quot;&quot;), &quot;4&quot;, &quot;&quot;), &quot;5&quot;, &quot;&quot;), &quot;6&quot;, &quot;&quot;), &quot;7&quot;, &quot;&quot;), &quot;8&quot;, &quot;&quot;), &quot;9&quot;, &quot;&quot;), &quot;0&quot;, &quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Customer</label>
        <referenceTo>End_Customer__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GRC_Access__c</fullName>
        <label>GRC (Access)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handoff_to_USRP__c</fullName>
        <label>Handoff to USRP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPFlex_Deal__c</fullName>
        <label>IPFlex Deal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Region__c</fullName>
        <label>In-Region</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Initial_BID_Deal_Owner__c</fullName>
        <label>Initial BID Deal Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterfaceChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InterfaceChanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCDG_SubAccountSucess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox will be checked only when API_Process_Status__c = CDG/SubAccount API Successful</description>
        <label>IsCDG/SubAccountSucess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCircuit_ID_USOSucess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>wil only be checked is API_Process_Status__c = Circuit ID/USO API Successful</description>
        <label>IsCircuit ID/USOSucess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeal_Rate_Plan_Sucess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>cheked only when API_Process_Status__c = Deal Rate Plan API Successful</description>
        <label>IsDeal Rate Plan Sucess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEncrypted_Password_APISucess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check only when API_Process_Status__c = Encrypted Password API Successful</description>
        <label>IsEncrypted Password APISucess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMigratedDeal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMigratedDeal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReconfigureDeal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defect fix : 219975, using this flag to make sure that the discounted pricing is applied in case of reconfigure prior to updating the stage on Opportunity</description>
        <label>IsReconfigureDeal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_MD5_Call_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is MD5 Call Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Isdocviewer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Isdocviewer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOA_Required__c</fullName>
        <label>LOA Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LikelihoodtoClose__c</fullName>
        <description>New pick list field, “Likelihood to Close”, which will have statuses dependent upon the current stage. The EBM will be able to edit the field at any stage, although the pick list values will continue to be limited by the current stage. The field should sit underneath the stage field on the opportunity.</description>
        <label>Likelihood to Close</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Approved (20%)</fullName>
                </value>
                <value>
                    <fullName>Contracts Requested (80%)</fullName>
                </value>
                <value>
                    <fullName>Deal Registration Requested (0%)</fullName>
                </value>
                <value>
                    <fullName>None (0%)</fullName>
                </value>
                <value>
                    <fullName>Ordered (100%)</fullName>
                </value>
                <value>
                    <fullName>Stale (5%)</fullName>
                </value>
                <value>
                    <fullName>Under active consideration by customer (50%)</fullName>
                </value>
                <value>
                    <fullName>Deal Lost (0%)</fullName>
                </value>
                <value>
                    <fullName>Deal Canceled 0%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lockin_Days__c</fullName>
        <label>New Start Price Lock-in days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MACDStatus__c</fullName>
        <description>When VLAN speed change is selected on the Change VF page and confirmed, when cloning the opportunity we’ll need to populate the MACD Status field on the oppty with “NeedsUSO” so that when the RDS Review button is clicked the USO call goes out.</description>
        <label>MACD Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MACD Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MACD_Pricing_Assignment_Status__c</fullName>
        <description>This field is populated with success/failure when Amount is populated on Product Pricing record from Rate.</description>
        <label>MACD Pricing Assignment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MACD_RDS_Review_Complete_LastTimeStamp__c</fullName>
        <label>MACD RDS Review Complete LastTimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MACD_RDS_Review_Completed_Status__c</fullName>
        <label>MACD RDS Review Complete Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Review_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MACD Review Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MACD_Status__c</fullName>
        <label>MACD Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Type__c</fullName>
        <label>MACD Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MACD_Update_Deal_hash_Error_Msg__c</fullName>
        <label>MACD Update Deal Hash Error Msg</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MACD_Update_Deal_hash_Last_TimeStamp__c</fullName>
        <label>MACD Update Deal Hash Last TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MACD_Update_Deal_hash_Status__c</fullName>
        <label>MACD Update Deal Hash Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Update_Deal_hash__c</fullName>
        <formula>IF(MACD_Update_Deal_hash_Status__c =&apos;In Progress&apos;, IMAGE($Label.Yellow_Color,&quot;In Progress&quot;,20,100),
IF(MACD_Update_Deal_hash_Status__c=&apos;Success&apos;,IMAGE($Label.Green_Color,&quot;Success&quot;,20,100),
IF(MACD_Update_Deal_hash_Status__c=&apos;Failed&apos;,IMAGE($Label.Red_Color,&quot;Failed&quot;,20,100),
IMAGE($Label.Grey_Color,&quot;Not Yet started&quot;,20,100)
)

)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MACD Update Deal hash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_growth__c</fullName>
        <label>MACD growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MCN_Access__c</fullName>
        <label>MCN (Access)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCN_SOC_GRC_Access__c</fullName>
        <formula>MCN_Access__c&amp;&quot;/&quot;&amp;SOC_Access__c&amp;&quot;/&quot;&amp;GRC_Access__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCN/SOC/GRC (Access)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD5_Error_Msg__c</fullName>
        <label>MD5 Error Msg</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MD5_Last_Time_Stamp__c</fullName>
        <label>MD5 Last Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MD5_Status__c</fullName>
        <label>MD5 Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MISPlus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For capturing order with MIS Plus</description>
        <label>MIS Plus(Managed Router)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MIS_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MIS Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Pricing_Schedule_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Pricing Schedule Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manualflow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for Tech ops users to convert an API order into Manual mode so that I can take the order through the manual provisioning flow.</description>
        <inlineHelpText>Please note: Selecting flag will route the order into manual flow. You can not perform Deal Hash related actions once selected. If Deal Hash activities are already kick started, Flag selection will not allow further MACD/ API related activities.</inlineHelpText>
        <label>Manual flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_deal_number__c</fullName>
        <label>Master Deal Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobility__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Flag is used for Attwireless product.</description>
        <label>Attwireless Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NTWK_CI_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NTWK CI Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Products__c</fullName>
        <label>Number of Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTC_Discount_Amount__c</fullName>
        <label>OTC Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>SFDC Opportunity ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PROMPT_Manual_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PROMPT Manual Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevent_Calculated_Discount_Price_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Calculated Discount Price Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Expiration_Date__c</fullName>
        <label>Price Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pricing_Schedule_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checked when a pricing schedule record is inserted</description>
        <label>Pricing Schedule Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_IPFLEX__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box to check SIProduct having IPFLEX</description>
        <inlineHelpText>Check box to check SIProduct having IPFLEX</inlineHelpText>
        <label>Product IPFLEX</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>